[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Maps/Main.gd" type="Script" id=1]
[ext_resource path="res://Resources/Tilesets/MapTileset.tres" type="TileSet" id=2]
[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=3]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Map" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="Map"]
mode = 1
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 16 )
cell_y_sort = true
format = 1
tile_data = PoolIntArray( -65510, 0, 0, -65509, 0, 0, -65508, 0, 0, -65507, 0, 0, -65506, 0, 0, -65505, 0, 0, -65504, 0, 0, -65503, 0, 0, -65502, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 33, 0, 0, 34, 0, 0, 65562, 0, 0, 65563, 0, 0, 65564, 0, 0, 65565, 0, 0, 65566, 0, 0, 65567, 0, 0, 65568, 0, 0, 65569, 0, 0, 65570, 0, 0, 131098, 0, 0, 131099, 0, 0, 131100, 0, 0, 131101, 0, 0, 131102, 0, 0, 131103, 0, 0, 131104, 0, 0, 131105, 0, 0, 131106, 0, 0, 196634, 0, 0, 196635, 0, 0, 196636, 0, 0, 196637, 0, 0, 196638, 0, 0, 196639, 0, 0, 196640, 0, 0, 196641, 0, 0, 196642, 0, 0, 262170, 0, 0, 262171, 0, 0, 262172, 0, 0, 262173, 0, 0, 262174, 0, 0, 262175, 0, 0, 262176, 0, 0, 262177, 0, 0, 262178, 0, 0, 327706, 0, 0, 327707, 0, 0, 327708, 0, 0, 327709, 0, 0, 327710, 0, 0, 327711, 0, 0, 327712, 0, 0, 327713, 0, 0, 327714, 0, 0, 393242, 0, 0, 393243, 0, 0, 393244, 0, 0, 393245, 0, 0, 393246, 0, 0, 393247, 0, 0, 393248, 0, 0, 393249, 0, 0, 393250, 0, 0, 458778, 0, 0, 458779, 0, 0, 458780, 0, 0, 458781, 0, 0, 458782, 0, 0, 458783, 0, 0, 458784, 0, 0, 458785, 0, 0, 458786, 0, 0 )

[node name="TileMap2" type="TileMap" parent="Map"]
mode = 1
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 16 )
cell_y_sort = true
format = 1
tile_data = PoolIntArray( -131047, 0, 0, -65511, 0, 0, 25, 0, 0, 65561, 0, 0, 131097, 0, 0, 196633, 0, 0, 262169, 0, 0, 327705, 0, 0, 393241, 0, 0 )

[node name="TileMap3" type="TileMap" parent="Map"]
mode = 1
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 16 )
format = 1
tile_data = PoolIntArray( -196584, 0, 0, -131048, 0, 0, -65512, 0, 0, 24, 0, 0, 65560, 0, 0, 131096, 0, 0, 196632, 0, 0, 262168, 0, 0, 327704, 0, 0 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 431.513, 270.009 )

[node name="SelectorArrowsTimer" type="Timer" parent="."]

[node name="PlayerMoveTimer" type="Timer" parent="."]

[node name="MainCamera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 3 )]
position = Vector2( 431.609, 263.081 )
[connection signal="timeout" from="SelectorArrowsTimer" to="." method="_on_SelectorArrowsTimer_timeout"]
[connection signal="timeout" from="PlayerMoveTimer" to="." method="_on_PlayerMoveTimer_timeout"]
